--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,8 @@ INCLUDE_DIRECTORIES(${LOCAL_LIBRARY_DIRS})
 ADD_SUBDIRECTORY(lib_behaviors-test)
 ADD_SUBDIRECTORY(pExampleApp)
 ADD_SUBDIRECTORY(pXRelayTest)
-
+ADD_SUBDIRECTORY(pOdometry)
+ADD_SUBDIRECTORY(pOdometryUUV)
 ##############################################################################
 #                           END of CMakeLists.txt
 ##############################################################################
