--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,30 +1,27 @@
-##############################################################################
-# FILE:        moos-ivp-extend/src/CMakeLists.txt
-# DATE:        2010/09/07
-#              2020/05/09 minor mods
-# DESCRIPTION: CMakeLists.txt file for the moos-ivp-extend source directory
-##############################################################################
+# ##############################################################################
+# FILE:        moos-ivp-extend/src/CMakeLists.txt DATE:        2010/09/07
+# 2020/05/09 minor mods DESCRIPTION: CMakeLists.txt file for the moos-ivp-extend
+# source directory
+# ##############################################################################
 
-
-#============================================================================
+# ============================================================================
 # Add the libraries in the current directory to the include path
-#============================================================================
-FILE(GLOB LOCAL_LIBRARY_DIRS ./lib_*)
-INCLUDE_DIRECTORIES(${LOCAL_LIBRARY_DIRS})
+# ============================================================================
+file(GLOB LOCAL_LIBRARY_DIRS ./lib_*)
+include_directories(${LOCAL_LIBRARY_DIRS})
 
-#============================================================================
+# ============================================================================
 # List the subdirectories to build...
-#============================================================================
+# ============================================================================
 
-ADD_SUBDIRECTORY(lib_behaviors-test)
-ADD_SUBDIRECTORY(pExampleApp)
-ADD_SUBDIRECTORY(pXRelayTest)
-ADD_SUBDIRECTORY(pOdometry)
-ADD_SUBDIRECTORY(pOdometryUUV)
-ADD_SUBDIRECTORY(pPointAssign)
-ADD_SUBDIRECTORY(pGenPath)
-
-##############################################################################
-#                           END of CMakeLists.txt
-##############################################################################
-
+add_subdirectory(lib_behaviors-test)
+add_subdirectory(pExampleApp)
+add_subdirectory(pXRelayTest)
+add_subdirectory(pOdometry)
+add_subdirectory(pOdometryUUV)
+add_subdirectory(pPointAssign)
+add_subdirectory(pGenPath)
+add_subdirectory(pGenRescue)
+# ##############################################################################
+# END of CMakeLists.txt
+# ##############################################################################
